--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,14 @@
-PORT=5000
-MONGO_URI=mongodb://localhost:27017/gym-tracker
+PORT=4000
+MONGO_URI=mongodb+srv://rudrakshkchavda:13101310@cluster0.kb3ohxh.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+JWT_ACCESS_SECRET=cssecret
+JWT_REFRESH_SECRET=cssecret2
+JWT_EMAIL_SECRET=cssecret3
+ACCESS_TOKEN_EXPIRES_IN=15m
+REFRESH_TOKEN_EXPIRES_IN=7d
+EMAIL_TOKEN_EXPIRES_IN=10m
+EMAIL_FROM="Gym Buddy <drexx2069@gmail.com>"
+SMTP_HOST=smtp.gmail.com
+SMTP_PORT=587
+SMTP_USER=drexx2069@gmail.com
+SMTP_PASS=xszwldjqwhnvcwhp
+FRONTEND_URL=http://localhost:3000
