--- a/frontend/.env
+++ b/frontend/.env
@@ -2,7 +2,7 @@ VITE_APP_VERSION = v1.5.0
 GENERATE_SOURCEMAP = false
 
 PORT=3000
-VITE_BASE_URL=https://api.buzziapp.com/api/v1
+# VITE_BASE_URL=https://api.buzziapp.com/api/v1
 VITE_APP_BASE_NAME = /
 
 
