--- a/frontend/package.json
+++ b/frontend/package.json
@@ -38,6 +38,7 @@
     "@vitejs/plugin-react": "4.4.1",
     "axios": "^1.9.0",
     "date-fns": "^4.1.0",
+    "dayjs": "^1.11.13",
     "formik": "2.4.6",
     "framer-motion": "12.8.2",
     "js-cookie": "^3.0.5",
