--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,17 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.1.0",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.5",
     "@mui/material": "^7.3.5",
+    "@mui/x-charts": "^8.20.0",
+    "@mui/x-date-pickers": "^8.19.0",
     "@tanstack/react-query": "^5.90.11",
     "axios": "^1.13.2",
+    "date-fns": "^4.1.0",
+    "dayjs": "^1.11.19",
     "formik": "^2.4.9",
+    "js-cookie": "^3.0.5",
     "react": "^19.2.0",
+    "react-date-range": "^2.0.1",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
-    "react-toastify": "^11.0.5"
+    "react-router-dom": "^7.9.6",
+    "react-toastify": "^11.0.5",
+    "yup": "^1.7.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
