--- a/backend/.env
+++ b/backend/.env
@@ -12,3 +12,7 @@ SMTP_PORT=587
 SMTP_USER=drexx2069@gmail.com
 SMTP_PASS=xszwldjqwhnvcwhp
 FRONTEND_URL=http://localhost:3001
+CLOUDINARY_CLOUD_NAME=xxxx
+CLOUDINARY_API_KEY=xxxx
+CLOUDINARY_API_SECRET=xxxx
+
