--- a/frontend/.env
+++ b/frontend/.env
@@ -2,5 +2,6 @@ VITE_APP_VERSION = v1.5.0
 GENERATE_SOURCEMAP = false
 
 PORT=3000
-VITE_BASE_URL=http://localhost:4000/api/
+# VITE_BASE_URL=http://localhost:4000/api/
+VITE_BASE_URL=https://gymbuddy-3z5s.onrender.com/
 VITE_APP_BASE_NAME = /
