--- a/backend/.env
+++ b/backend/.env
@@ -11,7 +11,7 @@ SMTP_HOST=smtp.gmail.com
 SMTP_PORT=587
 SMTP_USER=drexx2069@gmail.com
 SMTP_PASS=xszwldjqwhnvcwhp
-FRONTEND_URL=http://localhost:3001
+FRONTEND_URL=https://gymbuddy-3z5s.onrender.com
 CLOUDINARY_CLOUD_NAME=dvpszyjq2
 CLOUDINARY_API_KEY=888198669349418
 CLOUDINARY_API_SECRET=L0xlDVFhzT8KCi3wcBhlHzjBJXQ
