--- a/frontend/.env
+++ b/frontend/.env
@@ -3,5 +3,5 @@ GENERATE_SOURCEMAP = false
 
 PORT=3000
 # VITE_BASE_URL=http://localhost:4000/api/
-VITE_BASE_URL=https://gymbuddy-3z5s.onrender.com/
+VITE_BASE_URL=https://gymbuddy-3z5s.onrender.com/api/
 VITE_APP_BASE_NAME = /
