--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,9 @@
     "mongoose": "^8.17.1",
     "multer": "^2.0.2",
     "multer-storage-cloudinary": "^4.0.0",
+    "node-cron": "^4.2.1",
     "nodemailer": "^7.0.5",
+    "openai": "^6.16.0",
     "uuid": "^11.1.0"
   },
   "devDependencies": {
