--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,6 +28,7 @@
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.2.0",
     "react-icons": "^5.5.0",
+    "react-qr-barcode-scanner": "^2.1.20",
     "react-router-dom": "^7.9.6",
     "react-toastify": "^11.0.5",
     "recharts": "^3.5.1",
