--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mui/x-charts": "^8.20.0",
     "@mui/x-date-pickers": "^8.19.0",
     "@tanstack/react-query": "^5.90.11",
+    "@zxing/browser": "^0.1.5",
     "axios": "^1.13.2",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.19",
